# TCPChatPlatform

./: LICENSE  README.md
Client/: CMakeLists.txt  main.cpp  main.h  testUI.cpp  testUI.h
Client/UI/: frontPage.cpp  frontPage.h  frontPage.ui  testUI.cpp  testUI.h  testUI.ui
Client/globalResource/: globals.cpp  globals.h
Client/resources/: resources.qrc
Client/session/: session.cpp  session.h
Client/sqlQueries/: sql.cpp  sql.h
Client/sqlite3/: SQL.cpp  SQL.h
Server/: CMakeLists.txt  main.cpp
UI/LiveMessageApplication/: CMakeLists.txt  LiveMessageApplication.qmlproject  LiveMessageApplication.qmlproject.qtds  qds.cmake
UI/LiveMessageApplication/App/autogen/: environment.h
UI/LiveMessageApplication/LiveMessageApplication/: CMakeLists.txt  Constants.qml  qmldir
UI/LiveMessageApplication/LiveMessageApplication/designer/: plugin.metainfo
UI/LiveMessageApplication/LiveMessageApplicationContent/: App.qml  CMakeLists.txt  Screen01.ui.qml
